update user info modal

--- a/components/modal/template.html
+++ b/components/modal/template.html
@@ -1,4 +1,4 @@
-<div id="modal-{{ modal_type }}" class="fixed inset-0 hidden items-center justify-center bg-gray-800/80 z-[1000000]">
+<div id="modal-{{ modal_type }}" class="fixed inset-0 hidden items-center justify-center bg-gray-800/80 z-[100]">
     <div class="bg-white rounded-lg w-full shadow-lg mx-4
     {% if modal_type == 'user_info' %}
         lg:w-4/5
