--- a/adminv2/templates/adminv2/users/partials/user-info.html
+++ b/adminv2/templates/adminv2/users/partials/user-info.html
@@ -1,12 +1,67 @@
 {% load static %}
-<div>
-    <div>
-        {% if user.profileImage %}
-            <img src="{{user.profileImage.url}}" alt="{{user.firstname}} profle image"
-        {% else %}
-            <img src="{% static 'images/default-user.svg' %}" alt="default-profile-image"
+<div 
+    x-data = "{
+        isAdmin: {% if user.user_role == 'admin' %}true{% else %}false{% endif %},
+        userRole: '{{ user.user_role }}',
+    }"
+    class="flex flex-col gap-8">
+    <section class="flex flex-col md:flex-row gap-4 items-center">
+        <div class="profile-photo w-28 h-28 bg-blue-100 rounded-full overflow-hidden border-2 border-gray-300">
+            {% if user.profileImage %}
+                <img src="{{user.profileImage.url}}" alt="{{user.firstname}} profle image"
+            {% else %}
+                <img src="{% static 'images/default-user.svg' %}" alt="default-profile-image"
+            {% endif %}
+            class="object-cover border">
+        </div>
+        <div class="flex flex-col items-center gap-0.5">
+            <div class="text-lg font-bold"><span>{{ user.first_name }}</span> <span class="uppercase">{{ user.last_name }}</span></div>
+            <div x-text="userRole" class="capitalize font-normal">{{ user.user_role }}</div>
+        </div>
+        <div class="flex flex-row gap-2"
+            x-data="{
+                userId: {{ user.id }},
+                isLoading: false,
+                changeAdminStatus(){
+                    this.isLoading = true;
+                    change_admin_status(this.userId, this);
+                }
+            }"
+        >
+            <button 
+                x-bind:class="isAdmin ? 'bg-red-600' : 'bg-blue-600'"
+                @click ="changeAdminStatus"
+                class="text-white px-3 py-3 rounded-md cursor-pointer"
+                :disabled="isLoading">
+                
+                <i x-show="isLoading" class="fa fa-spinner fa-spin"></i>
+                <span x-text="isAdmin ? 'Demote from Admin' : 'Promote to Admin'"></span>
+            </button>
+            <!-- <button class="bg-red-600 text-white px-3 py-3 rounded-md">Block User</button> -->
+        </div>
+    </section>
+
+    <section class="grid grid-cols-1 sm:grid-cols-2 gap-y-3 gap-x-5 *:flex *:flex-col *:gap-0.5">
+        <div>
+            <h6 class="font-bold">Email</h6>
+            <a class="block" href="mailto:{{user.email}}">{{ user.email }}</a>
+        </div>
+
+        {% if user.phone_number %}
+        <div>
+            <h6 class="font-bold">Phone Number</h6>
+            <a class="block" href="tel:{{user.phone_number}}">{{ user.phone_number }}</a>
+        </div>
         {% endif %}
-        width="320px" class="inline-block object-cover border-2 border-blue-600 h-auto w-2xs p-0.5">
-    </div>
-    {{ user.first_name }}
+
+        <div>
+            <h6 class="font-bold">Last Login</h6>
+            <p>{{ user.last_login|date:"F j, Y, g:i A" }}</p>
+        </div>
+
+        <div>
+            <h6 class="font-bold">Date Joined</h6>
+            <p>{{ user.date_joined|date:"F j, Y, g:i A" }}</p>
+        </div>
+    </section>
 </div>
