--- a/adminv2/templates/adminv2/users/users.html
+++ b/adminv2/templates/adminv2/users/users.html
@@ -37,12 +37,10 @@
         <table class="w-full text-sm text-left text-gray-500">
             <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                 <tr class="*:px-6 *:py-3">
+                    <th scope="col"><span>Profile Photo</span></th>
                     <th scope="col" class="">
-                        First Name
-                    </th>
-                    <th scope="col" class="">
-                        Last Name
-                    </th>
+                        Name
+                    </th>    
                     <th scope="col" class="">
                         E-mail
                     </th>
@@ -64,29 +62,34 @@
             </thead>
             <tbody>
                 {% for user in users %}
-                <tr id="listing-row-{{ result.id }}" class="odd:bg-white even:bg-gray-50 border-b border-gray-200 *:px-6 *:py-4">
-                    <td class="">
+                <tr id="" class="odd:bg-white even:bg-gray-50 border-b border-gray-200 *:px-6 *:py-4">
+                    <td>
                         {% if user.profileImage %}
                             <img src="{{user.profileImage.url}}" alt="{{user.firstname}} profle image"
                         {% else %}
                             <img src="{% static 'images/default-user.svg' %}" alt="default-profile-image"
                         {% endif %}
-                        width="24px" class="inline-block rounded-full object-cover border-2 border-blue-600 h-6 w-6 p-0.5">
-                        
-                        <span>{{ user.first_name }}</span>
-
+                        width="24px" class="inline-block rounded-full object-cover h-6 w-6">
+                    </td>
+                    <td class="">                        
+                        <span>{{ user.first_name }} {{ user.last_name }}</span>
                     </td>
                     <td class="">
-                        {{ user.last_name }}
-                    </td>
-                    <td class="">
-                        {{ user.email }}
+                        <a class="text-blue-400" href="mailto:{{user.email}}">{{ user.email }}</a>
                     </td>
                     <td class=" capitalize">
-                        {{ user.user_role }}
+                        {% if user.user_role == 'customer' %}
+                            User
+                        {% else %}
+                            {{ user.user_role }}
+                        {% endif %}
                     </td>
                     <td class="">
-                        {{ user.is_active }}
+                        {% if user.is_active == True %}
+                            <div class="bg-green-100 text-green-600 p-1.5 rounded-md w-max">Active</div>
+                        {% else %}
+                            <div class="bg-red-100 text-red-600 p-1.5 rounded-md w-max">Inactive</div>
+                        {% endif %}
                     </td>
                     {% if request.user.is_superuser %}
                     <td>
@@ -111,7 +114,7 @@
     
     {% component "modal" modal_type="user_info" modal_title="User Information" %}
         {% fill "children" %}
-        <div class="modal-body overflow-y-auto max-h-[80vh]">
+        <div class="modal-body overflow-y-auto max-h-[80vh] px-4 py-6">
 
         </div>
         {% endfill %}
@@ -175,8 +178,8 @@
 {% block script %}
     <script>
 
-        function change_admin_status(user_id){
-            url = "{% url 'adminv2:toggle-admin' 123 %}".replace("123", user_id);
+        function change_admin_status(user_id, alpineComponent){
+            let url = "{% url 'adminv2:toggle-admin' 123 %}".replace("123", user_id);
 
             fetch(url, {
                 method: "POST",
@@ -188,6 +191,9 @@
             .then(response => response.json())
             .then(data => {
                 if(data.success){
+                    alpineComponent.isAdmin = !alpineComponent.isAdmin; //toggle admin status
+                    alpineComponent.userRole = data.user_role;
+
                     showToastNotification('success', data.message);
                 }
                 else{
@@ -196,6 +202,9 @@
                 }
             })
             .catch(error => console.log("Error:", error))
+            .finally(() => {
+                alpineComponent.isLoading = false;
+            })
         }
 
         
@@ -214,7 +223,6 @@
                 let parser = new DOMParser();
                 let doc = parser.parseFromString(data, 'text/html');
                 let user_info = doc.body.innerHTML;
-                console.log(user_info);
                 let modal = document.getElementById('modal-user_info')
 
                 modal.querySelector('.modal-body').innerHTML = user_info;
