--- a/components/toast_notification/template.html
+++ b/components/toast_notification/template.html
@@ -1,4 +1,4 @@
-<div id="toast-{{notification_type}}" class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow-gray-500 shadow-2xl fixed top-5 right-5 z-50" role="alert" style="display: none">
+<div id="toast-{{notification_type}}" class="flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow-gray-500 shadow-2xl fixed top-5 right-5 z-[2000]" role="alert" style="display: none">
     <div class="inline-flex items-center justify-center shrink-0 w-8 h-8 
         {% if notification_type == 'success' %}
             text-green-500 bg-green-100 rounded-lg dark:bg-green-800 dark:text-green-200
