--- a/adminv2/templates/adminv2/users/users.html
+++ b/adminv2/templates/adminv2/users/users.html
@@ -50,14 +50,6 @@
                     <th scope="col">
                         Active Status
                     </th>
-                    {% if request.user.is_superuser %}
-                    <th scope="col">
-                        Admin Access
-                    </th>
-                    {% endif %}
-                    <th scope="col">
-                        Actions
-                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -71,7 +63,7 @@
                         {% endif %}
                         width="24px" class="inline-block rounded-full object-cover h-6 w-6">
                     </td>
-                    <td class="">                        
+                    <td class="hover:underline cursor-pointer" onclick='view_user_info({{user.id}})'>                        
                         <span>{{ user.first_name }} {{ user.last_name }}</span>
                     </td>
                     <td class="">
@@ -90,22 +82,7 @@
                         {% else %}
                             <div class="bg-red-100 text-red-600 p-1.5 rounded-md w-max">Inactive</div>
                         {% endif %}
-                    </td>
-                    {% if request.user.is_superuser %}
-                    <td>
-                        <label class="switch">
-                            <input type="checkbox" class="admin-toggle" onchange="change_admin_status({{user.id}})"
-                            {% if user.user_role == 'admin' %}checked{% endif %}>
-                            <span class="slider round"></span>
-                        </label>
-                    </td>
-                    {% endif %}
-                    <td>
-                        <button type="button" class="w-max bg-blue-700 text-white hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 cursor-pointer" onclick='view_user_info({{user.id}})'>
-                            View Details
-                        </button>
-                    </td>
-                    
+                    </td>                    
                 </tr>
                 {% endfor %}
             </tbody>
