solve overflowing problem in modal

--- a/adminv2/templates/adminv2/users/users.html
+++ b/adminv2/templates/adminv2/users/users.html
@@ -91,7 +91,7 @@
     
     {% component "modal" modal_type="user_info" modal_title="User Information" %}
         {% fill "children" %}
-        <div class="modal-body overflow-y-auto max-h-[80vh] px-4 py-6">
+        <div class="modal-body overflow-y-auto h-[90%] px-4 py-6">
 
         </div>
         {% endfill %}
