--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -84,7 +84,7 @@
                         <!-- Dropdown Menu -->
                         <ul x-show="open" x-transition 
                             class="lg:absolute right-0 mt-2 w-full lg:w-38 bg-white border border-gray-300 rounded-md shadow-lg">
-                            <!-- <li class="px-4 py-2 hover:bg-gray-100"><a href="#" class="w-full block">Settings</a></li> -->
+                            <li class="px-4 py-2 hover:bg-gray-100"><a href="{% url 'user:settings'%}" class="w-full block">Settings</a></li>
                             <li class="px-4 py-2 hover:bg-gray-100"><a href="{% url 'listing:favourite_listings'%}" class="w-full block">Favourite Listing</a></li>
                             {%if user.user_role == 'admin'%}
                             <li class="px-4 py-2 hover:bg-gray-100"><a href="{% url 'adminv2:dashboard' %}" class="w-full block">Control Panel</a></li>
@@ -188,6 +188,7 @@
                         {% component "signup_form" form_title="Sign Up" form_class="p-4" show_login_link=False autofocus=True is_js_submission=True %} {% endcomponent %}
                     </div>
                     
+                   
 
                 </div>
                 
@@ -198,6 +199,9 @@
 
     <!-- Modal (Initially Hidden) -->
     
+    {% component "toast_notification" notification_type="success" message="" %} {% endcomponent %}
+    {% component "toast_notification" notification_type="danger" message="" %} {% endcomponent %}
+    {% component "toast_notification" notification_type="warning" message="" %} {% endcomponent %}
     
     <script src="{% static 'js/helper_func.js' %}"></script>
     <script src="{% static 'js/utils.js' %}"></script>
