--- a/user/templates/user/settings.html
+++ b/user/templates/user/settings.html
@@ -29,8 +29,18 @@
         </ul>
     </nav>
 
-    <div class="lg:col-span-3 px-4">
+    <div class="lg:col-span-3 px-4 *:border-b *:border-gray-300 *:py-7">
+        <div>
+            <h2 class="text-3xl font-semibold">Account</h2>
+            <p class="text-sm">Manage your profile and customize settings</p>
+        </div>
+        
         <form method="post" enctype="multipart/form-data" onsubmit="submitForm(event)" class="max-w-2xl" action="{% url 'user:update-profile' %}">
+            <div class="mb-3">
+                <h3 class="text-xl font-semibold">Personal Information</h3>
+                <p class="text-sm">Provide your information so that your account can operate correctly.</p>
+            </div>
+            
             <div class="flex flex-col md:flex-row items-center gap-y-2 gap-x-3 mb-4">
                 <div class="relative w-28 h-28 bg-blue-100 rounded-full overflow-hidden border-2 border-gray-300">
 
@@ -70,10 +80,49 @@
                 {% component "button" html_tag="button" label="Update Details" type="primary" width="max" function="submit"  %} {% endcomponent %}
             </div>
         </form>
+
+        <div>
+            <div class="mb-3">
+                <h3 class="text-xl font-semibold">Reset Password</h3>
+                <p class="text-sm">Set a password that is unique</p>
+            </div>
+            {% component "button" html_tag="button" label="Reset Password" type="primary" width="max" function="button" attr="onclick='openModal_reset_password()'"  %} {% endcomponent %}
+        </div>
     </div>
     
 
 </div>
+
+{% component "modal" modal_type="reset_password" modal_title="Reset Password" %}
+    {% fill "children" %}
+    <form x-data="{ password_show: false }" class="px-4 py-4" action="{% url 'user:reset-password' %}" onsubmit="handleResetPassword(event)">
+
+        <div class="flex flex-col gap-4">
+            <div>
+                <label for="id_old_password" class="label-primary">Current Password</label>
+                <input class="input-primary" :type="password_show ? 'text' : 'password'" name="old_password" maxlength="150" id="id_old_password" required>
+            </div>
+
+            <div>
+                <label for="id_new_password" class="label-primary">New Password</label>
+                <input :type="password_show ? 'text' : 'password'"  class="input-primary" name="new_password" maxlength="150" id="id_new_password" required>
+            </div>
+
+            <div>
+                <label for="id_new_password2" class="label-primary">Confirm New Password</label>
+                <input :type="password_show ? 'text' : 'password'" class="input-primary" name="new_password2" maxlength="150" id="id_new_password2" required>
+            </div>
+            <div class="flex justify-end">
+                <button class="text-gray-400 text-sm hover:underline" type="button" @click="password_show = !password_show" x-text="password_show ? 'Hide Password' : 'Show Password'"></button>
+            </div>
+            {% component "button" html_tag="button" label="Reset Password" type="primary" width="full" function="submit"  %} {% endcomponent %}
+        </div>
+
+    </form>
+        
+    {% endfill %}
+{% endcomponent %}
+
 {% endblock %}
 
 {% block script %}
