--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,5 +1,5 @@
 {% extends "core/base.html" %}
-
+{% comment %} 
 {% block styleblock %} 
     <style>
         header form{
@@ -20,7 +20,7 @@
             color: blue;
         }
     </style>
-{% endblock %}
+{% endblock %} {% endcomment %}
 
 {% block content %}
     <main class="responsive-padding flex flex-col mt-9 justify-center items-center">
