--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,7 +1,7 @@
 {% extends "core/base.html" %}
 
 {% block styleblock %} 
-    <style>
+    {% comment %} <style>
         header form{
             display: none;
         }
@@ -15,7 +15,7 @@
         header #logo{
             width: 80px;
         }
-    </style>
+    </style> {% endcomment %}
 {% endblock %}
 
 {% block content %}
