--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -1,7 +1,11 @@
 {% extends 'core/base.html'%}
 {% load static %}
 
-{% block title %} Contact Us - Eaglespoint Horizon Limited {% endblock %}
+{% block title %} Contact Us | Eaglespoint Horizon Limited {% endblock %}
+{% block meta_description %} Contact Eaglespoint Horizon Limited for expert guidance on real estate, study abroad, and travel services. Reach us via phone, email, or our online inquiry form. {% endblock %}
+{% block meta_keywords %}Eaglespoint contact, contact real estate agency Nigeria, study abroad help, travel assistance, Eaglespoint Horizon Limited, Abuja real estate, education consulting, travel consulting{% endblock %}
+{% block og_title%} Contact Us | Eaglespoint Horizon Limited {% endblock %}
+{% block og_description %} Contact Eaglespoint Horizon Limited for expert guidance on real estate, study abroad, and travel services. Reach us via phone, email, or our online inquiry form. {% endblock %}
 
 {% block content %}
 <section class="contact responsive-padding pt-12 flex flex-col lg:flex-row  gap-12 items-center lg:items-stretch justify-between">
