--- a/static/css/output.css
+++ b/static/css/output.css
@@ -1305,6 +1305,9 @@
   .uppercase {
     text-transform: uppercase;
   }
+  .italic {
+    font-style: italic;
+  }
   .not-italic {
     font-style: normal;
   }
