--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,4 +1,10 @@
 {% extends "core/base.html" %}
+
+{% block title %} Login | Eaglespoint Horizon Limited {% endblock %}
+{% block meta_description %} Log in to your Eaglespoint account to manage your profile, explore property listings, book travel, or apply for study abroad programs. {% endblock %}
+{% block meta_keywords %}Eaglespoint login, user login, real estate login, study abroad portal, travel booking login, secure account access{% endblock %}
+{% block og_title%} Login | Eaglespoint Horizon Limited {% endblock %}
+{% block og_description %} Access your Eaglespoint account to manage listings, travel plans, or study abroad applications. {% endblock %}
 {% comment %} 
 {% block styleblock %} 
     <style>
