--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,6 +1,12 @@
 {% extends "core/base.html" %}
 
+{% block title %} Sign Up | Eaglespoint Horizon Limited {% endblock %}
+{% block meta_description %} Create your Eaglespoint account to get started with property services, travel arrangements, or study abroad opportunities. {% endblock %}
+{% block meta_keywords %}sign up Eaglespoint, register account, create user account, real estate signup, study abroad portal registration, travel consultant portal{% endblock %}
+{% block og_title%} Sign Up | Eaglespoint Horizon Limited {% endblock %}
+{% block og_description %} Join Eaglespoint to explore real estate, plan your travels, or apply for global education opportunities. {% endblock %}
 {% block styleblock %} 
+
     {% comment %} <style>
         header form{
             display: none;
