--- a/user/templates/user/settings.html
+++ b/user/templates/user/settings.html
@@ -1,6 +1,12 @@
 {% extends "core/base.html" %}
 {% load static %}
 
+{% block title %} Account Settings | Eaglespoint Horizon Limited {% endblock %}
+{% block meta_description %} Customize your Eaglespoint experience — update your personal details, and manage services {% endblock %}
+{% block meta_keywords %}user profile, Eaglespoint settings, update user account, manage listings, user dashboard, travel profile, education application status{% endblock %}
+{% block og_title%} Account Settings | Eaglespoint Horizon Limited {% endblock %}
+{% block og_description %} ustomize your Eaglespoint experience — update your personal details, track activities, and manage services. {% endblock %}
+
 {% block content %}
 <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-200 lg:p-4">
     <!-- Nav bar -->
