--- a/listing/templates/listing/search.html
+++ b/listing/templates/listing/search.html
@@ -1,13 +1,16 @@
 {% extends 'core/base.html'%}
 {% load static %}
 
-{% block title %} Search Result {% endblock %}
+{% block title %} Search Result for '{{search_query}}' {% endblock %}
 
 {% block content %}
 <main class="mt-9 responsive-padding">   
-    {% component "button" html_tag="button" label="<i class='fa fa-filter'></i> Apply Fiters" type="primary" width="max" function="submit" extraclass="px-4 py-1" attr="onclick='openModal_search_fiters()'" %} {% endcomponent %} 
-    <div id="listing-container" class="mt-6 grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">  
-    
+    <div class="flex justify-between flex-wrap">
+        <h2 class="text-2xl font-bold">Search Results for '<span class="font-semibold italic">{{search_query}}</span>'</h2>
+        {% component "button" html_tag="button" label="<i class='fa fa-filter'></i> Apply Fiters" type="primary" width="max" function="submit" extraclass="px-4 py-1" attr="onclick='openModal_search_fiters()'" %} {% endcomponent %}
+    </div>
+
+        <div id="listing-container" class="mt-6 grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">    
         {% if results %}
             {% for result in results %}
                 {% component "listing_card" 
