--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en" style="overflow-x: hidden;">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,11 +44,11 @@
 </head>
 <body class='font-base text-gray-900 overflow-x-hidden' x-data="{ openLoginModal: false }">
 
-    <header x-data="{ isOpen:false }" class="w-full bg-white border-gray-200 responsive-padding py-2.5 sticky top-0 z-30 drop-shadow-md">
-        <div id="headerWrapper" class="relative flex  gap-6 items-center justify-between mx-auto">
+    <header x-data="{ isOpen:false }" class="w-full bg-white border-gray-200 py-2.5 sticky top-0 z-30 drop-shadow-md">
+        <div id="headerWrapper" class="relative flex gap-6 items-center justify-between mx-auto">
             
             <!-- Logo Section -->
-            <a href="{% url 'core:home' %}" class="block" id="logo">
+            <a href="{% url 'core:home' %}" class="block pl-4 md:pl-8 lg:pl-20" id="logo">
                 <img src="{% static 'images/eaglespoint-logo.png' %}" width="32px" class="w-16" alt="EaglesPoint Logo" />
             </a>
     
@@ -77,7 +77,7 @@
             </button>
     
             <!-- Navigation Menu -->
-            <nav x-cloak :class="isOpen ? 'flex' : 'hidden lg:block'" class="w-screen absolute p-2 lg:p-0 top-full z-50 bg-white lg:relative lg:top-0 flex-col justify-between items-start md:w-full lg:w-max lg:flex lg:items-center" id="mobile-menu">
+            <nav x-cloak :class="isOpen ? 'flex' : 'hidden lg:block'" class="w-screen absolute p-2 lg:p-0 top-full z-50 bg-white lg:relative lg:top-0 flex-col justify-between items-start md:w-full lg:w-max lg:flex lg:items-center lg:pr-20" id="mobile-menu">
                 <ul class="flex flex-col lg:items-center mt-4 w-full px-3 lg:px-0 md:w-full lg:w-max lg:flex-row lg:gap-4 lg:text-sm lg:mt-0 *:block *:text-gray-700 *:pl-2 *:py-2 *:lg:p-0 *:hover:bg-gray-100 *:lg:hover:bg-transparent *:lg:hover:underline">
                     <li><a href="{% url 'core:home' %}">Home</a></li>
                     <li><a href="{% url 'core:real_estate' %}">Real Estate</a></li>
