remove stats and partners from index for testing css

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -115,7 +115,7 @@
     </div>
 
     <!-- Stats and Partner Section -->
-    {% component "stats_partner" %} {% endcomponent %}
+    {% comment %} {% component "stats_partner" %} {% endcomponent %} {% endcomment %}
 
     <section class="testimonial responsive-padding relative bg-repeat py-8 bg-[100px] text-white" style="background-image: url({% static 'images/pattern4.svg' %}); background-color:blue;" data-aos="fade-up">
         <!-- overlay -->
