added overflow-x-hidden to the main tag

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,7 +4,7 @@
 {% block title %}Home - Eaglespoint Horizon Limited{% endblock %}
 
 {% block content %}
-<main class="flex flex-col gap-20">
+<main class="flex flex-col gap-20 overflow-x-hidden">
 
     <section class="travel-hero w-full self-stretch flex flex-col items-center gap-7 lg:gap-12 bg-slate-100 py-6 pb-0">
             <div class="flex flex-col gap-2 lg:w-4/5 responsive-padding items-center justify-center ">
