--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -80,12 +80,12 @@
             <!-- Navigation Menu -->
             <nav x-cloak :class="isOpen ? 'flex' : 'hidden lg:block'" class="w-screen absolute p-2 lg:p-0 top-full z-50 bg-white lg:relative lg:top-0 flex-col justify-between items-start md:w-full lg:w-max lg:flex lg:items-center lg:mr-20" id="mobile-menu">
                 <ul class="flex flex-col lg:items-center mt-4 w-full px-3 lg:px-0 md:w-full lg:w-max lg:flex-row lg:gap-4 lg:text-sm lg:mt-0 *:block *:text-gray-700 *:pl-2 *:py-2 *:lg:p-0 *:hover:bg-gray-100 *:lg:hover:bg-transparent *:lg:hover:underline">
-                    <li><a href="{% url 'core:home' %}">Home</a></li>
-                    <li><a href="{% url 'core:real_estate' %}">Real Estate</a></li>
-                    <li><a href="{% url 'core:home' %}">Travel</a></li>
-                    <li><a href="#">Blogs</a></li>
-                    <li><a href="{% url 'core:about' %}">About Us</a></li>
-                    <li><a href="{% url 'core:contact' %}">Contact</a></li>
+                    <li><a class="block w-full" href="{% url 'core:home' %}">Home</a></li>
+                    <li><a class="block w-full" href="{% url 'core:real_estate' %}">Real Estate</a></li>
+                    <li><a class="block w-full" href="{% url 'core:home' %}">Travel</a></li>
+                    <li><a class="block w-full" href="#">Blogs</a></li>
+                    <li><a class="block w-full" href="{% url 'core:about' %}">About Us</a></li>
+                    <li><a class="block w-full" href="{% url 'core:contact' %}">Contact</a></li>
 
                     {% if request.user.is_authenticated %}
                     <li x-cloak x-data="{ open: false }" @click.away="open = false" class="lg:relative cursor-pointer">
